--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -415,6 +415,7 @@ table{
  border-radius: 0 0 15px 15px;
  height: 30vh;
  margin-bottom: 6rem;
+ padding-bottom: 4px;
 }
 table tr{
   text-align: center;
